feat: add dmn table with process integration